--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <h1>Красноярский Союз Молодежи</h1>
           <p>25 марта 1999 - 22 июля 2017</p>
           <h2>ПРОДАЕТСЯ ВСЕ</h2>
+          <p>P.S Привет окодим)</p>
         </div>
       </div>
       <div id="block" class="tall">
